@@ -1,7 +1,8 @@
 Version 1.16
 ------------
 Fix incorrect file size in file handle based setattr on big endian hardware.
-Fix oops in build_path_from_dentry when out of memory. 
+Fix oops in build_path_from_dentry when out of memory.  Add checks for invalid
+and closing file structs in writepage/partialpagewrite
 
 Version 1.15
 ------------
